# nushell_plugins

./: Cargo.toml  crates.nix  flake.nix  new_plugin.nu
nu_plugin_graph/: Cargo.toml
nu_plugin_graph/src/: main.rs  plugin.rs  types.rs
nu_plugin_graph/src/plugin/: commands.rs
nu_plugin_nnm/: Cargo.toml
nu_plugin_nnm/src/: main.rs  plugin.rs  types.rs  util.rs
nu_plugin_nnm/src/plugin/: commands.rs
