[workspace]
members = ["nu_plugin_graph"]
resolver = "3"

[workspace.dependencies]
nu-plugin = "0.103.0"
nu-protocol = "0.103.0"

serde = { version = "1.0.219", features = ["derive"] }
typetag = "0.2.20"

built = "0.7"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Vitalii Lukyuanov <tukanoid@outlook.com>"]
license = "MIT"
repository = "https://github.com/tukanoidd/nushell_plugins"
homepage = "https://github.com/tukanoidd/nushell_plugins"
