[workspace]
members = ["nu_plugin_graph", "nu_plugin_nnm"]
resolver = "3"

[workspace.dependencies]
nu-plugin = "0.105"
nu-protocol = "0.105"
built = "0.7"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Vitalii Lukyuanov <tukanoid@outlook.com>"]
license = "MIT"
repository = "https://github.com/tukanoidd/nushell_plugins"
homepage = "https://github.com/tukanoidd/nushell_plugins"
