[workspace]
members = ["nu_plugin_graph", "nu_plugin_nnm"]
resolver = "3"

[workspace.dependencies]
nu-plugin = "0.106"
nu-protocol = "0.106"
built = "0.8"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Vitalii Lukyuanov <tukanoid@outlook.com>"]
license = "MIT"
repository = "https://github.com/tukanoidd/nushell_plugins"
homepage = "https://github.com/tukanoidd/nushell_plugins"
