[package]
name = "nu_plugin_graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
build = "build.rs"

[dependencies]
nu-plugin.workspace = true
nu-protocol.workspace = true

rgb = "0.8"
textplots = "0.8.7"

smart-default = "0.7.1"

[build-dependencies]
built.workspace = true
