[package]
name = "nu_plugin_nnm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
build = "build.rs"

[dependencies]
derive_more = { version = "2.0.1", features = ["deref"] }
futures = "0.3.31"
nu-plugin.workspace = true
nu-protocol.workspace = true

rusty_network_manager = "0.6.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
zbus = { version = "4.1.1", features = ["tokio"] }

[build-dependencies]
built.workspace = true
